# memory-brain

./: --format  .gitignore  Cargo.toml  README.md  clip_server.py  memories_backup.json  memory_map.html  photos_sync.py  vlm_server.py
..bfg-report/2026-02-04/09-39-19/: cache-stats.txt  object-id-map.old-new.txt
..bfg-report/2026-02-04/09-39-23/: cache-stats.txt  object-id-map.old-new.txt
crates/memory-actor/: Cargo.toml
crates/memory-actor/examples/: integration_test.rs
crates/memory-actor/src/: dream.rs  embedding.rs  guardian.rs  hippocampus.rs  lib.rs  messages.rs  neocortex.rs  storage.rs
docs/: CLS_PEKKO_INTEGRATION_PLAN.md
examples/: coredb_bench.rs  debug_hnsw.rs  hnsw_bench.rs  sam_brain.rs
scripts/: notion-sync.sh
src/: audit.rs  bench.rs  bloom_filter.rs  cache.rs  clip_onnx.rs  compression.rs  consolidate.rs  constellation.rs  coredb_storage.rs  coredb_store.rs  dream.rs  embedding.rs  episodic.rs  forgetting.rs  glove.rs  hippocampus.rs  hnsw_index.rs  inverted_index.rs  lib.rs  llm.rs  main.rs  memory_actor.rs  merge.rs  mindmap.rs  predict.rs  procedural.rs  sam.rs  schema.rs  semantic.rs  semantic_store.rs  server.rs  simd_ops.rs  storage.rs  tui.rs  types.rs  vecdb_storage.rs  visual.rs  visual_storage.rs  vlm.rs  watch.rs  (+2 more)
templates/: base.html  search.html  store.html  visual.html
tests/: integration_tests.rs  vlm_test.rs
