[package]
name = "memory-brain"
version = "0.1.0"
edition = "2021"
description = "Human brain-inspired memory system for LLMs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Vector search (lightweight, pure Rust)
hora = "0.1"

# HNSW for fast approximate nearest neighbors
hnsw = "0.11"
space = "0.17"
rand = "0.8"
rand_pcg = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for memory IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# LRU cache for embeddings
lru = "0.12"

# CoreDB backend (optional)
coredb = { path = "../coredb", optional = true }

# Directory paths
dirs = "6.0"

# MLX for embeddings (optional)
mlx-rs = { path = "../MLX/mlx-rs", optional = true }

[features]
default = []
mlx = ["mlx-rs"]
coredb-backend = ["coredb"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
